--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 # Ignore all files without extension (common C/C++ binaries)
 *
-!*.cpp
-!*.h
-!*.hpp
-!makefile
-!Makefile
+!.cpp
 !.gitignore
 !readme.md
 
@@ -18,6 +14,10 @@
 *.dylib
 *.dll
 *.dSYM/
+*.h
+*.hpp
+*makefile
+*Makefile
 
 # Ignore any extensionless compiled file
 */   # keep folders
